--- a/index.html
+++ b/index.html
@@ -30,17 +30,14 @@
         <hr>
 
   <section id="main_content">
+<span style = "float:left"><A href = "#UserGuide">User Guide</A></span>
+<span style = "float:right"><A href = "Algorithm.html">Localizer Algorithm</A></span>
 
+<p style = "clear:both">
 <p>This library localizes 1-D and 2-D barcodes from arbitrary images and is able to successfully handle noisy backgrounds as well as barcodes that are skewed or rotated out of plane. The resulting cropped and localized images can then be decoded by other software barcode decoders that require an input image as close as possible to a pure barcode. </p>
 
-<p>Most barcode decoders cannot easily handle noisy images or images where the barcode is rotated, so using this package as a localizer prior to decoding significantly improves decode success rates. Compared to ZXing, a popular open-source decoding library, using this library in combination with ZXing almost doubled ZXing's success rate at decoding both 1-D and 2-D codes in single images.</p>
+<p>Most barcode decoders cannot easily handle noisy images or images where the barcode is rotated, so using this package as a localizer prior to decoding significantly improves decode success rates. Using this library in combination with ZXing, a popular open-source decoding library, almost doubled ZXing's success rate at decoding both 1-D and 2-D codes in single images.</p>
 
-
-
-<h5> General Observations </h5>
-<p> The goal for this project is slightly different from the goal of most software decoders used in mobile phone apps etc. Firstly, this project only aims to handle the localization step, not the decoding. Secondly, most software decoders assume that the barcode will be roughly centered and horizontal and explicitly trade accuracy for speed with the idea that their target user is on a mobile phone and the camera is feeding a continuous stream of images.</p>
-
-<p>The concept there is that even if the decoder misses on one still image, the next image in the feed will have a little bit of jitter from the user's hand motion and may now present a readable image. The user is also encouraged to orient the image so that the barcode is roughly centered and horizontal.  My localizer aims to get closer to "one shot, one kill" so that if there is a barcode anywhere in the image, it can be located and passed to the decoder in presentable format for reading.</p>
 
 <h3>Example Images with the Localized Barcode</h3>
 <BR>
@@ -53,6 +50,10 @@
 </div>
 <p style = "clear:both">
 
+<h3> General Observations </h3>
+<p> The goal for this project is slightly different from the goal of most software decoders used in mobile phone apps etc. Firstly, this project only aims to handle the localization step, not the decoding. Secondly, most software decoders assume that the barcode will be roughly centered and horizontal and explicitly trade accuracy for speed with the idea that their target user is on a mobile phone and the camera is feeding a continuous stream of images.</p>
+
+<p>The concept there is that even if the decoder misses on one still image, the next image in the feed will have a little bit of jitter from the user's hand motion and may now present a readable image. The user is also encouraged to orient the image so that the barcode is roughly centered and horizontal.  My localizer aims to get closer to "one shot, one kill" so that if there is a barcode anywhere in a single image, it can be located and passed to the decoder in presentable format for reading.</p>
 
 <h3> Test results </h3>
 <br>
@@ -73,9 +74,13 @@
 * Some barcodes were localized accurately but could not be decoded by ZXing - usually because the source image was too blurry or had shadows/light gradients that prevented ZXing from successfully decoding the barcode. These could potentially be decoded by a more robust decoder. </p>
 
 
-<h3>User Guide</h3>
-<p>The BarcodeLocalizer is designed to be used as a library imported into your Java project. A sample tester program called BarcodeTester.java is included with the source code to demonstrate its use.</p>
+<a name = "UserGuide"><h3>User Guide</h3></a>
+<p>The BarcodeLocalizer is designed to be used as a library imported into your Java project. A sample tester program called SimpleBarcodeTester.java is included with the source code to demonstrate its use. You will also need the <a href = "http://www.opencv.org">OpenCV for Java</A> library in your library path and you might want <a href = "https://github.com/zxing/zxing/">ZXing</A> to use as a decoder</p>
 
+<a href = "http://www.opencv.org"><img style = "float:left" src = "images/opencv_java_logo_small.png"></a>
+<a href = "https://github.com/zxing/zxing/"><img style = "float:right" src = "images/ZXing_logo.png"></a>
+<br>
+<br>
 </section>
         <footer>
           BarcodeLocalizer is maintained by <a href="https://github.com/karthikj1">karthikj1</a><br>
