Added algo description

--- a/Algorithm.html
+++ b/Algorithm.html
@@ -79,7 +79,7 @@
 <br>
 
 <a href = "http://www.opencv.org"><img style = "float:left" src = "images/opencv_java_logo_small.png"></a>
-<a href = "https://github.com/zxing/zxing/"><img style = "float:right" src = "images/ZXing_logo.png"></a>
+<a href = "https://github.com/zxing/zxing/"><img style = "float:right" src = "images/Zxing_logo.png"></a>
 <br>
 <br>
 </section>
