--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <p>The BarcodeLocalizer is designed to be used as a library imported into your Java project. A sample tester program called SimpleBarcodeTester.java is included with the source code to demonstrate its use. You will also need the <a href = "http://www.opencv.org">OpenCV for Java</A> library in your library path and you might want <a href = "https://github.com/zxing/zxing/">ZXing</A> to use as a decoder</p>
 
 <a href = "http://www.opencv.org"><img style = "float:left" src = "images/opencv_java_logo_small.png"></a>
-<a href = "https://github.com/zxing/zxing/"><img style = "float:right" src = "images/ZXing_logo.png"></a>
+<a href = "https://github.com/zxing/zxing/"><img style = "float:right" src = "images/Zxing_logo.png"></a>
 <br>
 <br>
 </section>
