--- a/index.html
+++ b/index.html
@@ -64,10 +64,18 @@
 <li> Images that could not be localized or decoded </li>
 </ul>
 </p>
+<h5>Results for BarcodeLocalizer</h5>
+<table border = 1>
+<TR><TH> Type</TH><th>Decoded</th><TH>Localized*</TH><TH>Failed</TH></TR>
+<TR><TH>Linear</TH><TD>16 </TD><TD> 8 </TD><TD> 6 </TD></TR>
+<TR><TH>Matrix</TH><TD>15 </TD><TD> 7 </TD><TD> 8 </TD></TR>
+</table>
+<BR>
+<h5>Results for ZXing</h5>
 <table border = 1>
 <TR><TH> Type</TH><th>Decoded</th><TH>Localized</TH><TH>Failed</TH></TR>
-<TR><TH>Linear</TH><TD>16 (ZXing - 9)</TD><TD> 8 (ZXing - N/A)</TD><TD> 6 (ZXing - 21)</TD></TR>
-<TR><TH>Matrix</TH><TD>15 (ZXing - 8)</TD><TD> 7 (ZXing - N/A)</TD><TD> 8 (ZXing - 22)</TD></TR>
+<TR><TH>Linear</TH><TD>9</TD><TD>  N/A</TD><TD> 21</TD></TR>
+<TR><TH>Matrix</TH><TD>8</TD><TD> N/A </TD><TD>  22</TD></TR>
 </table>
 <p>
 <BR>
